# FusionRAG

./: README.md  compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/api/: main.py
backend/core/: RecursiveChunking.py  bm25.py  chunking.py  document_processor.py  generator.py  hybrid_search.py  qdrant-client.py  qdrant_client.py  reranker.py  retriever.py
backend/evals/: evaluator.py  test_dataset.json
backend/evals/results/: score.csv  score2.csv
backend/labs/: bm25.py  reranker.py  retriever.py
frontend/: Dockerfile  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/chat/: ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx
frontend/src/components/sidebar/: Sidebar.jsx
frontend/src/hooks/: useChat.js
frontend/src/services/: api.js
