[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.97",
    "fastapi>=0.135.1",
    "fastembed>=0.8.0",
    "google-generativeai>=0.8.6",
    "groq<1.0.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
